// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OwnersListContext should fetch the owners list for the selected element that includes filtered components: mount 1`] = `
[root]
  ▾ <Grandparent>
      <Child>
      <Child>
`;

exports[`OwnersListContext should fetch the owners list for the selected element that includes filtered components: owners for "Child" 1`] = `
ARRAY [
  OBJECT {
    "displayName": "Grandparent",
    "hocDisplayNames": null,
    "id": 2,
    "key": null,
    "identifierDescription": 5,
  },
  OBJECT {
    "displayName": "Parent",
    "hocDisplayNames": null,
    "id": 3,
    "key": null,
    "identifierDescription": 5,
  },
  OBJECT {
    "displayName": "Child",
    "hocDisplayNames": null,
    "id": 4,
    "key": null,
    "identifierDescription": 5,
  },
]
`;

exports[`OwnersListContext should fetch the owners list for the selected element: mount 1`] = `
[root]
  ▾ <Grandparent>
    ▾ <Parent>
        <Child>
        <Child>
`;

exports[`OwnersListContext should fetch the owners list for the selected element: owners for "Child" 1`] = `
ARRAY [
  OBJECT {
    "displayName": "Grandparent",
    "hocDisplayNames": null,
    "id": 2,
    "key": null,
    "identifierDescription": 5,
  },
  OBJECT {
    "displayName": "Parent",
    "hocDisplayNames": null,
    "id": 3,
    "key": null,
    "identifierDescription": 5,
  },
  OBJECT {
    "displayName": "Child",
    "hocDisplayNames": null,
    "id": 4,
    "key": null,
    "identifierDescription": 5,
  },
]
`;

exports[`OwnersListContext should fetch the owners list for the selected element: owners for "Parent" 1`] = `
ARRAY [
  OBJECT {
    "displayName": "Grandparent",
    "hocDisplayNames": null,
    "id": 2,
    "key": null,
    "identifierDescription": 5,
  },
  OBJECT {
    "displayName": "Parent",
    "hocDisplayNames": null,
    "id": 3,
    "key": null,
    "identifierDescription": 5,
  },
]
`;

exports[`OwnersListContext should include all owners for a component wrapped in react memo: owners for "InnerComponent" 1`] = `
ARRAY [
  OBJECT {
    "displayName": "Grandparent",
    "hocDisplayNames": null,
    "id": 2,
    "key": null,
    "identifierDescription": 5,
  },
  OBJECT {
    "displayName": "InnerComponent",
    "hocDisplayNames": ARRAY [
      "Memo",
    ],
    "id": 3,
    "key": null,
    "identifierDescription": 8,
  },
  OBJECT {
    "displayName": "InnerComponent",
    "hocDisplayNames": ARRAY [
      "ForwardRef",
    ],
    "id": 4,
    "key": null,
    "identifierDescription": 6,
  },
]
`;

exports[`OwnersListContext should include the current element even if there are no other owners: mount 1`] = `
[root]
    <Grandparent>
`;

exports[`OwnersListContext should include the current element even if there are no other owners: owners for "Grandparent" 1`] = `
ARRAY [
  OBJECT {
    "displayName": "Grandparent",
    "hocDisplayNames": null,
    "id": 2,
    "key": null,
    "identifierDescription": 5,
  },
]
`;
